--- a/_posts/2020-06-20-ds_tools.md
+++ b/_posts/2020-06-20-ds_tools.md
@@ -20,12 +20,9 @@ This article is a high-level of some basic software development tools used in in
 This is not a Data Science or Machine Learning intro. I will not be covering algorithms or ML concepts here. 
 
 ##### What exactly is a Data Scientist (DS)?
-Answering the question in the title of this sub-section is not my objective here. It just happens to be something we need to define, at least in the scope of this article.
-
-In deed, I think the very question that makes the title of this section is not very good. Instead of focusing on labels (that may differ from team to team) and treat them as universal, take a look at the different roles in a data team: [this post](https://hackernoon.com/top-10-roles-for-your-data-science-team-e7f05d90d961) by Cassie Kozyrkov should give you an initial idea about what you can find.
+Answering the question in the title of this sub-section is not my objective here. It just happens to be something we need to define, at least in the scope of this article. As the Data Science field is so wide, maybe the question "what is data science?" is easier to answer. I will not delve into that now. If you are interested in what are the different roles in a data team, take a look at the different roles in [this post](https://hackernoon.com/top-10-roles-for-your-data-science-team-e7f05d90d961) by Cassie Kozyrkov. It should give you a good initial idea about what you can find.
 
 This article will be based on a simple definition of "Data Scientist". As there is no standard definition that I am aware of, I will go with a very general idea of *job profiles you could find labeled as "Data Scientist"*.
-
 
 ## General development tools
 Python, Jupyter, Git and Anaconda. You will find these 4 tools useful even if you are not planning to work in industry. They will help you keep your work organized and keep the less organized parts of your work in an easy-to-use place (see Jupyter for that). This article will be a list of these basic tools, a little overview and the reasons why I think you will love them.
